# EmbeddedMPC

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  keywords.txt  library.properties
examples/doubleintegrator/: doubleintegrator.ino  problem.cpp  problem.hpp  problem_data.c  problem_data.h  problemdata.hpp  workspace.c  workspace.h
src/: EmbeddedMPC.h  memory.cpp  memory.hpp  osqpsolver.cpp  osqpsolver.hpp  problem.cpp  problem.hpp
src/osqp/: osqp_configure.h  qdldl_types.h
test/: CMakeLists.txt  doubleintegrator.h  memory_test.cpp  osqpsolver_test.cpp  problem_data.c  problem_data.h  problem_test.cpp  workspace.c  workspace.h
